--- a/Pages/ASCII ART.html
+++ b/Pages/ASCII ART.html
@@ -41,7 +41,7 @@
 
         #myBtn:hover {
             background-color: rgb(57, 83, 201);
-            /* Add a dark-grey background on hover */
+            /* Add a colour on hover */
         }
     </style>
 </body>
