--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<!--Back to top-->
-<body>
+    <!--Back to top-->
+
+<body {font-family: Arial, Helvetica, sans-serif;} * {box-sizing: border-box;}>
     <style>
         #myBtn {
             display: none;
@@ -43,6 +44,52 @@
             background-color: rgb(57, 83, 201);
             /* Add a dark-grey background on hover */
         }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        input[type=text],
+        select,
+        textarea {
+            width: 100%;
+            /* Full width */
+            padding: 12px;
+            /* Some padding */
+            border: 1px solid rgb(7, 7, 7);
+            border-radius: 4px;
+            /* Rounded borders */
+            box-sizing: border-box;
+            /* Make sure that padding and width stays in place */
+            margin-top: 6px;
+            /* Add a top margin */
+            margin-bottom: 16px;
+            /* Bottom margin */
+            resize: vertical;
+            /* Allow the user to vertically resize the textarea (not horizontally) */
+        }
+
+        /* Style the submit button with a specific background color etc */
+        input[type=submit] {
+            background-color: rgb(52, 18, 204);
+            color: white;
+            padding: 12px 25px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        /* When moving the mouse over the submit button, add a darker green color */
+        input[type=submit]:hover {
+            background-color: rgb(57, 83, 201);
+        }
+
+        /* Add a background color and some padding around the form */
+        .container {
+            border-radius: 20px;
+            background-color: #f2f2f2;
+            padding: 20px;
+        }
     </style>
 </body>
 </head>
@@ -61,14 +108,14 @@
     </div>
 
 
-    <div class="container-fluid ">
+    <div class="container-fluid bg-dark ">
         <div class="row">
             <!--Navigation-->
             <div class="col-12 col-md-3 p-2 bg-secondary  ">
                 <a href="/ProgStud/index.html">
                     <img src="/ProgStud/Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig"
                         width="200" height="260">
-                    </a>
+                </a>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item btn btn-dark btn-block mt-2">
                         <div class="d-grid">
@@ -81,9 +128,12 @@
                     <li class="nav-item dropdown btn btn-dark mt-2">
                         <a class="nav-link text-white dropdown-toggle " data-bs-toggle="dropdown" href="#">Portfolio</a>
                         <ul type="button" class="dropdown-menu ">
-                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Gallerier.html">Gallerier</a></li>
-                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/ASCII ART.html">ASCII Art</a></li>
-                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Planter.html">Planter</a></li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Gallerier.html">Gallerier</a>
+                            </li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/ASCII ART.html">ASCII Art</a>
+                            </li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Planter.html">Planter</a>
+                            </li>
                         </ul>
                     </li>
                     <hr class="mt-4">
@@ -98,11 +148,28 @@
                 <hr class="mt-4">
             </div>
             <!--Kontakt form-->
-            <div class="col bg-dark">
+            <div class="col-12 col-md-5 offset-md-2 bg-dark text-white p-2">
+                <form action="mailto:someone@example.com" method="post" enctype="text/plain">
+                    <label for="fname">Fornavn og efternavn</label><br>
+                    <input type="text" id="fname" name="firstname" placeholder="Fornavn..."><input type="text"
+                        id="lname" name="lastname" placeholder="Efternavn"><br>
 
+                    <label for="lname">Virksomehedens navn og adresse</label><br>
+                    <input type="text" id="vname" name="companyname" placeholder="Virksomhed, Adresse"><br>
+
+                    <label for="lname">Email</label><br>
+                    <input type="text" id="ename" name="email" placeholder="Email..."><br>
+
+                    <label for="subject">Subject</label><br>
+                    <textarea id="subject" name="subject" placeholder="Write something.."
+                        style="height:200px"></textarea>
+
+                    <input type="submit" value="Submit">
+                </form>
             </div>
         </div>
     </div>
+
     <!--Black banner-->
     <div class="container-fluid p-4 bg-dark text-center">
         <h6 class="display-6"></h6>
@@ -119,7 +186,7 @@
         window.onscroll = function () { scrollFunction() };
 
         function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            if (document.body.scrollTop > 1000|| document.documentElement.scrollTop > 1000) {
                 mybutton.style.display = "block";
             } else {
                 mybutton.style.display = "none";
