--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             /* Remove borders */
             outline: none;
             /* Remove outline */
-            background-color: rgb(52, 39, 231);
+            background-color: #0d6efd;
             /* Set a background color */
             color: white;
             /* Text color */
