--- a/Pages/Gallerier.html
+++ b/Pages/Gallerier.html
@@ -40,7 +40,7 @@
         }
 
         #myBtn:hover {
-            background-color: #0d6efd;
+            background-color: #297cf8;
             /* Add a dark-grey background on hover */
         }
     </style>
