--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         }
 
         #myBtn:hover {
-            background-color: rgb(57, 83, 201);
+            background-color: #297cf8;
             /* Add a dark-grey background on hover */
         }
     </style>
