--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -11,40 +11,6 @@
 
 <body {font-family: Arial, Helvetica, sans-serif;} * {box-sizing: border-box;}>
     <style>
-        #myBtn {
-            display: none;
-            /* Hidden by default */
-            position: fixed;
-            /* Fixed/sticky position */
-            bottom: 20px;
-            /* Place the button at the bottom of the page */
-            right: 30px;
-            /* Place the button 30px from the right */
-            z-index: 99;
-            /* Make sure it does not overlap */
-            border: none;
-            /* Remove borders */
-            outline: none;
-            /* Remove outline */
-            background-color: rgb(52, 39, 231);
-            /* Set a background color */
-            color: white;
-            /* Text color */
-            cursor: pointer;
-            /* Add a mouse pointer on hover */
-            padding: 15px;
-            /* Some padding */
-            border-radius: 10px;
-            /* Rounded corners */
-            font-size: 18px;
-            /* Increase font size */
-        }
-
-        #myBtn:hover {
-            background-color: #297cf8;
-            /* Add a dark-grey background on hover */
-        }
-
         * {
             box-sizing: border-box;
         }
@@ -71,7 +37,7 @@
 
         /* Style the submit button with a specific background color etc */
         input[type=submit] {
-            background-color: rgb(52, 18, 204);
+            background-color: #1266F1;
             color: white;
             padding: 12px 25px;
             border: none;
@@ -81,17 +47,18 @@
 
         /* When moving the mouse over the submit button, add a darker green color */
         input[type=submit]:hover {
-            background-color: rgb(57, 83, 201);
+            background-color: #2571ec;
         }
 
         /* Add a background color and some padding around the form */
         .container {
             border-radius: 20px;
-            background-color: #f2f2f2;
+            background-color: #adaaaa;
             padding: 20px;
         }
     </style>
 </body>
+<link rel="stylesheet" href="/css/ToTopButton.css">
 </head>
 
 <body>
@@ -148,20 +115,21 @@
                 <hr class="mt-4">
             </div>
             <!--Kontakt form-->
-            <div class="col-12 col-md-5 offset-md-2 bg-dark text-white p-2">
+            <div class="col-12 col-md-5 offset-md-2 bg-dark text-info p-2">
                 <form action="mailto:someone@example.com" method="post" enctype="text/plain">
                     <label for="fname">Fornavn og efternavn</label><br>
-                    <input type="text" id="fname" name="firstname" placeholder="Fornavn..."><input type="text"
-                        id="lname" name="lastname" placeholder="Efternavn"><br>
+                    <input type="text" id="fname" name="firstname" placeholder="Fornavn.."><input type="text" id="lname"
+                        name="lastname" placeholder="Efternavn.."><br>
 
                     <label for="lname">Virksomehedens navn og adresse</label><br>
-                    <input type="text" id="vname" name="companyname" placeholder="Virksomhed, Adresse"><br>
+                    <input type="text" id="vname" name="companyname" placeholder="Virksomhed, Adresse.."><br>
 
                     <label for="lname">Email</label><br>
-                    <input type="text" id="ename" name="email" placeholder="Email..."><br>
+                    <input type="text" id="ename" name="email" placeholder="Email.."><br>
 
-                    <label for="subject">Subject</label><br>
-                    <textarea id="subject" name="subject" placeholder="Write something.."
+                    <label for="subject">Emne</label><br>
+                    <textarea id="subject" name="subject"
+                        placeholder="Her kan du for eksempel skrive hvad i laver og hvad i kan tilbyde, eller man kan stille et spørgsmål.."
                         style="height:200px"></textarea>
 
                     <input type="submit" value="Submit">
@@ -178,26 +146,6 @@
     <!--Back to top-->
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
-    <script>
-        //Get the button:
-        mybutton = document.getElementById("myBtn");
-
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function () { scrollFunction() };
-
-        function scrollFunction() {
-            if (document.body.scrollTop > 1000|| document.documentElement.scrollTop > 1000) {
-                mybutton.style.display = "block";
-            } else {
-                mybutton.style.display = "none";
-            }
-        }
-
-        // When the user clicks on the button, scroll to the top of the document
-        function topFunction() {
-            document.body.scrollTop = 0; // For Safari
-            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
-        }
-    </script>
+    <script src="../JS/ToTop.js"></script>
 
 </body>
