--- a/Pages/ASCII ART.html
+++ b/Pages/ASCII ART.html
@@ -12,7 +12,7 @@
 
     <style>
     </style>
-    <link rel="stylesheet" href="/css/ToTopButton.css">
+    <link rel="stylesheet" href="../css/ToTopButton.css">
 </head>
 
 <body>
