--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -58,7 +58,7 @@
         }
     </style>
 </body>
-<link rel="stylesheet" href="/css/ToTopButton.css">
+<link rel="stylesheet" href="../css/ToTopButton.css">
 </head>
 
 <body>
