--- a/Pages/Planter.html
+++ b/Pages/Planter.html
@@ -10,7 +10,7 @@
     <!--Back to top-->
     <style>
     </style>
-    <link rel="stylesheet" href="/css/ToTopButton.css">
+    <link rel="stylesheet" href="../css/ToTopButton.css">
 </head>
 
 <body>
