--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -10,6 +10,7 @@
     <!--Back to top-->
 
 <body {font-family: Arial, Helvetica, sans-serif;} * {box-sizing: border-box;}>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
     <script>
         $(document).ready(function (e) {
             $("#frmContact").on('submit', (function (e) {
@@ -189,7 +190,7 @@
             margin: 0 0 25px 0;
         }
     </style>
-    <script src='https://www.google.com/recaptcha/api.js'></script>
+
 </body>
 <link rel="stylesheet" href="../css/ToTopButton.css">
 </head>
@@ -293,8 +294,8 @@
 
 
                     <div>
-                        <input type="submit" data-sitekey="reCAPTCHA_site_key" data-callback='onSubmit' data-action='submit' id="send-message" name="send" class="btn-submit g-recaptcha" value="Send" />
-                        <button class="g-recaptcha" data-sitekey="reCAPTCHA_site_key" data-callback='onSubmit'
+                        <input type="submit" data-sitekey="6Ld_LoUgAAAAANrcVcsDjLcM_UFXT-oUSWY8KdAC" data-callback='onSubmit' data-action='submit' id="send-message" name="send" class="btn-submit g-recaptcha" value="Send" />
+                        <button class="g-recaptcha" data-sitekey="6Ld_LoUgAAAAANrcVcsDjLcM_UFXT-oUSWY8KdAC" data-callback='onSubmit'
                         data-action='submit'>Submit</button>
                         <div id="statusMessage">
                             <?php
