--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -250,7 +250,7 @@
             </div>
             <!--Kontakt form-->
             <div class="col-12 col-md-5 offset-md-2 bg-dark text-info p-2">
-                <form name="frmContact" id="frmContact" action="mailto:someone@example.com" method="post"
+                <form name="frmContact" id="frmContact" action="mailto:michaelrichs@gmail.com" method="post"
                     novalidate="novalidate">
 
                     <div class="label">Fornavn:</div>
