--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -288,7 +288,7 @@
 
 
                     <div>
-                        <input type="submit" data-sitekey="6Le1T4UgAAAAAKF3AI_9cnTPTcdkSM4Sy40fJBNK"
+                        <input type="submit" data-sitekey="<?php echo SITE_KEY; ?>"
                             data-callback='onSubmit' data-action='submit' id="send-message" name="send"
                             class="btn-submit g-recaptcha" value="Send" />
 
