--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -284,12 +284,12 @@
                         <textarea name="content" id="comment-content" class="input-field" cols="40" rows="4"
                             placeholder="Her kan du for eksempel skrive hvad i laver og hvad i kan tilbyde, eller man kan stille et spørgsmål.."></textarea>
                     </div>
-
-                    <input type="Submit" id="send-message" class="btn-submit btn-primary">
-                    <p></p>
                     <div>
-                        <div data-sitekey="<?php echo SITE_KEY; ?>" class="g-recaptcha">
+                        <div type="submit" data-sitekey="<?php echo SITE_KEY; ?>" data-callback='onSubmit'
+                            data-action='submit' id="send-message" name="send" class="btn-submit g-recaptcha"
+                            value="Send">
                     </div>
+                    <input type="Submit" id="send-message" class="btn-submit btn-primary">
                     <div id="statusMessage">
                         <?php
                                 if (! empty($message)) {
