--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -250,7 +250,8 @@
             </div>
             <!--Kontakt form-->
             <div class="col-12 col-md-5 offset-md-2 bg-dark text-info p-2">
-                <form id="frmContact" action="mailto:michaelrichs@gmail.com" method="POST" novalidate="novalidate">
+                <form id="frmContact" action="mailto:michaelrichs@gmail.com" method="POST"
+                    novalidate="novalidate">
 
                     <div class="label">Fornavn:</div>
                     <div class="field">
@@ -284,22 +285,24 @@
                         <textarea name="content" id="comment-content" class="input-field" cols="40" rows="4"
                             placeholder="Her kan du for eksempel skrive hvad i laver og hvad i kan tilbyde, eller man kan stille et spørgsmål.."></textarea>
                     </div>
+
+
                     <div>
-                        <div type="submit" data-sitekey="<?php echo SITE_KEY; ?>" data-callback='onSubmit'
-                            data-action='submit' id="send-message" name="send" class="btn-submit g-recaptcha"
-                            value="Send">
-                    </div>
-                    <div id="statusMessage">
-                        <?php
+                        <input type="submit" data-sitekey="6Le1T4UgAAAAAKF3AI_9cnTPTcdkSM4Sy40fJBNK"
+                            data-callback='onSubmit' data-action='submit' id="send-message" name="send"
+                            class="btn-submit g-recaptcha" value="Send" />
+
+                        <div id="statusMessage">
+                            <?php
                                 if (! empty($message)) {
                                     ?>
-                        <p class='<?php echo $type; ?>Message'>
-                            <?php echo $message; ?>
-                        </p>
-                        <?php
+                            <p class='<?php echo $type; ?>Message'>
+                                <?php echo $message; ?>
+                            </p>
+                            <?php
                                 }
                                 ?>
-                    </div>
+                        </div>
                 </form>
             </div>
         </div>
