--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -319,7 +319,11 @@
     <!--Back to top-->
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
-
+    <script>
+        function onSubmit(token) {
+            document.getElementById("frmContact").submit();
+        }
+    </script>
 
     <script src="../JS/ToTop.js"></script>
 
