--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -1,6 +1,3 @@
-<?php
-require('constant.php');
-?>
 <!DOCTYPE html>
 <html lang="dk">
 
@@ -10,6 +7,7 @@ require('constant.php');
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="component/jquery/jquery-3.2.1.min.js"></script>
     <!--Back to top-->
 
 <body {font-family: Arial, Helvetica, sans-serif;} * {box-sizing: border-box;}>
