--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -232,9 +232,9 @@
                                         placeholder="Her kan du for eksempel skrive hvad i laver og hvad i kan tilbyde, eller man kan stille et spørgsmål.."></textarea>
                                 </div>
                                 <div>
-                                    <input type="submit" data-site_key="<?php echo SITE_KEY; ?>" data-callback='onSubmit' data-action='submit' id="send-message" name="send" class="btn-submit g-recaptcha" value="Send" />
+                                    <input type="submit" data-site-key="<?php echo SITE_KEY; ?>" data-callback='onSubmit' data-action='submit' id="send-message" name="send" class="btn-submit g-recaptcha" value="Send" />
             
-                                    <div id="statusMessage">
+                                    <div  id="statusMessage">
                                         <?php
                                             if (! empty($message)) {
                                                 ?>
