--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -191,7 +191,7 @@
                 <div id="central">
                     <div class="content">
                         <div id="message">
-                            <form id="frmContact" action="" method="POST" novalidate="novalidate">
+                            <form id="frmContact" action="https://forms.un-static.com/forms/e66496e61e51094484394517e6755aac83e459de" method="POST" novalidate="novalidate">
 
                                 <div class="label">Fornavn:</div>
                                 <div class="field">
