--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <style>
     </style>
-    <link rel="stylesheet" href="../css/ToTopButton.css">
+    <link rel="stylesheet" href="/css/ToTopButton.css">
 </head>
 
 <body>
