--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <style>
     </style>
-    <link rel="stylesheet" href="../css/ToTopButton.css">
+    <link rel="stylesheet" href="../ProgStud/css/ToTopButton.css">
 </head>
 
 <body>
@@ -163,5 +163,5 @@
     <hr>
     <!--Back to top-->
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-    <script src="../JS/ToTop.js"></script>
+    <script src="../ProgStud/JS/ToTop.js"></script>
 </body>
