--- a/Pages/Gallerier.html
+++ b/Pages/Gallerier.html
@@ -31,7 +31,7 @@
         <div class="row row-cols-3">
             <!--Navigation-->
             <div class="col-12 col-md-3 p-2 bg-secondary  ">
-                <a href="../ProgStud/index.html">
+                <a href="/ProgStud/index.html">
                     <img src="../ProgStud/Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block img-thumbnail" alt="Mig"
                         width="200" height="260">
                 </a>
